# JaggaChain

./: CONTRIBUTING.md  LICENSE  README.md  index.html
backend/: .env.example  package-lock.json  package.json  server.js  solana.js  test_rpc.js
backend/scripts/: cleanup-dummy.js
frontend/: .env.example  index.html  package-lock.json  package.json  vercel.json
frontend/public/: landing.html
frontend/scripts/: make-nepal-map-transparent.mjs
frontend/src/: App.jsx  index.css  main.jsx
prev/: COMPLETE_WORKFLOW.md  CONNECT_BACKEND_FRONTEND.md  Cargo.toml  JAGGACHAIN_GUIDE.md  MONGODB_SETUP.md  PORT_CONFIGURATION.md  QUICK_START.md  README.md  SETUP.md  WORKFLOW.md  package.json  tsconfig.json
