[workspace]
members = [
    "programs/jaggachain_program",
    "programs/land_nft",
    "programs/transfer_approval",
    "programs/admin_registry",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
